--- a/templates/Contact-Us.html
+++ b/templates/Contact-Us.html
@@ -49,8 +49,9 @@
 </head>
 <body class="u-body u-xl-mode" data-lang="en">
 
-    <a href="https://nicepage.com/k/aesthetic-website-templates" class="u-image u-logo u-image-1" data-image-width="314" data-image-height="120">
-          <img src="https://assets.nicepagecdn.com/792fa3ce/5198378/images/AAC-logo-H-white.webp" class="u-logo-image u-logo-image-1">
+<header class="u-box-shadow u-clearfix u-gradient u-header u-header" id="sec-1c99"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+			  <a href="https://nicepage.com/k/aesthetic-website-templates" class="u-image u-logo u-image-1" data-image-width="314" data-image-height="120">
+                <img src="https://assets.nicepagecdn.com/792fa3ce/5198378/images/AAC-logo-H-white.webp" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -72,16 +73,19 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Content-Manager.html">Content Manager</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Content-Manager.html">
+Content Manager</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Upload.html">Upload</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact-Us.html">Contact Us</a>
+
 </li></ul>
               </div>
             </div>
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-      </div></header>
+      </div>
+      </header>
     <section class="u-clearfix u-section-1" id="sec-1710">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1">Need Help?</h2>
@@ -104,15 +108,18 @@
           </a>
         </div>
       </div></footer>
+
+
+
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
+      <a class="u-link" href="https://www.aacsolutions.com.au/" target="_blank">
+        <span>Python Media Streaming</span>
       </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>created by</span>
       </p>
-      <a class="u-link" href="#" target="_blank">
-        <span>Website Builder Software</span>
+      <a class="u-link" href="https://www.python.org/" target="_blank">
+        <span>AAC Solutions</span>
       </a>.
     </section>
 
