--- a/templates/Upload.html
+++ b/templates/Upload.html
@@ -32,7 +32,6 @@
     }
 
     </script>
-
     <meta name="theme-color" content="#478ac9">
     <meta property="og:title" content="Content Manager">
     <meta property="og:type" content="website">
@@ -112,5 +111,17 @@
         </div>
       </div>
     </footer>
+
+        <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://www.python.org/" target="_blank">
+        <span>Python Media Streaming</span>
+      </a>
+      <p class="u-text">
+        <span>created by</span>
+      </p>
+      <a class="u-link" href="https://www.aacsolutions.com.au/" target="_blank">
+        <span>AAC Solutions</span>
+      </a>.
+    </section>
 </body>
 </html>
