--- a/templates/Content-Manager.html
+++ b/templates/Content-Manager.html
@@ -14,18 +14,16 @@
     <link rel="stylesheet" href="static/css/nicepage-site.css" media="screen">
     <link rel="stylesheet" href="static/css/Content-Manager.css" media="screen">
     <!--Adding custom CSS to make footer sticky-->
-    <style>
-      .u-body {
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-      }
-      .content {
-        flex: 1 0 auto;
-      }
-      .u-footer {
-        flex-shrink: 0;
-      }
+ <style>
+        body {
+            display: flex;
+            min-height: 100vh;
+            flex-direction: column;
+        }
+
+        footer {
+            margin-top: auto;
+        }
     </style>
     <!--JS-->
     <script class="u-script" type="text/javascript" src="static/js/jquery-3.5.1.min.js" defer=""></script>
@@ -93,7 +91,7 @@ Content Manager</a>
       <div class="u-clearfix u-sheet u-sheet-1">
 		<h2 class="heading-3">Flask Content Manager: </h2>
 		<h2 class="heading-7">Steps to stream: </h2>
-                    <ol role="list">=
+                    <ol role="list">
                         <li>Choose a file by selecting it from the list.<br/>If uploading, visit the "Upload" page, after the upload is done and it should appear in the list.
                         </li>
 
@@ -114,7 +112,6 @@ Content Manager</a>
 </form>
                     </section>
     <footer class="u-clearfix u-footer u-grey-80" id="sec-3c41">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-align-left u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="linkedin" target="_blank" href="https://au.linkedin.com/company/aacsolutions"><span class="u-icon u-social-icon u-social-linkedin u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-8d8d"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-8d8d"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M41.3,83.7H27.9V43.4h13.4V83.7z M34.6,37.9L34.6,37.9c-4.6,0-7.5-3.1-7.5-7c0-4,3-7,7.6-7s7.4,3,7.5,7
       C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
@@ -125,5 +122,19 @@ Content Manager</a>
         </div>
       </div>
     </footer>
+
+        <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://www.python.org/" target="_blank">
+        <span>Python Media Streaming</span>
+      </a>
+      <p class="u-text">
+        <span>created by</span>
+      </p>
+      <a class="u-link" href="https://www.aacsolutions.com.au/" target="_blank">
+        <span>AAC Solutions</span>
+      </a>.
+    </section>
+
+
   </body>
 </html>
