--- a/templates/Contact-Us.html
+++ b/templates/Contact-Us.html
@@ -6,7 +6,9 @@
     <meta name="keywords" content="Need Help?">
     <meta name="description" content="">
     <title>Contact Us</title>
-
+<!--FAVICON   -->
+    <link rel="icon" href="static/assets/favicon2.png" type="image/x-icon">
+<!--css -->
     <link rel="stylesheet" href="static/css/nicepage.css" media="screen">
     <link rel="stylesheet" href="static/css/nicepage-site.css" media="screen">
     <link rel="stylesheet" href="static/css/Contact-Us.css" media="screen">
