--- a/templates/Home.html
+++ b/templates/Home.html
@@ -11,7 +11,9 @@ Have adjusted HTML using FLEXBOX to ensure the footer stays at the bottom of the
     <meta name="keywords" content="Welcome">
     <meta name="description" content="">
     <title>Home</title>
-
+    <!--FAVICON   -->
+        <link rel="icon" href="static/assets/favicon2.png" type="image/x-icon">
+    <!--css -->
 <link rel="stylesheet" href="static/css/nicepage.css" media="screen">
 <link rel="stylesheet" href="static/css/nicepage-site.css" media="screen">
 <link rel="stylesheet" href="static/css/Home.css" media="screen">
@@ -260,4 +262,3 @@ Content Manager</a>
     </section>
 </body>
 </html>
-
